CR-2003-07-17-0: Testsuite: install_core_system can now handle new complex
                            behaviour.

SG-2003-07-17-0: Bugfix:    Fixed the build
                 Changed:   sge_schedd

BD-2003-07-16-0: Bugfix:    Change FreeBSD arch strings from freebsd-* to
                            fbsd-*.  This fixes arch display for FreeBSD
                            i386, ia64, and ppc.
                 Changed:   all

SG-2003-07-16-1: Enhancem.: additional profiling information about a
                            scheduler run Some profiling code was added to
                            get a better picture of the bottle necks within
                            a scheduler run.
                 Review:    
                 Changed:   sge_schedd

SG-2003-07-16-0: optim.     - Optimized functional ticket computation with
                              share_functional_shares on.
                            - Compute fshare weighting factors only when needed.
                              This can be done because the configuration will 
                              not change during one sheduling run.
                            - Unset run status only for the queued jobs, which
                              were set running during ftix compution.

                 Review:    AH
                 Changed:   sge_schedd

CR-2003-07-16-0: Testsuite: bugs/issuezilla/193: cleanup function should
                            not run for sge systems < 6.0

EB-2003-07-16-0: Bugfix:    Changed code concerning hostgroup modifications
                            via qconf -?attr options
                 Changed:   sge_qmaster, qconf

JG-2003-07-16-0: Testsuite: Added a testsuite function "dump_ts_config" to dump
                            the testsuite configuration (attribute name, value 
                            and description) to a file.

EB-2003-07-15-1: Enhancem.: Bugfix for Enhancem. EB-2003-05-15-0