@@ -45,7 +45,11 @@
 
 #define MSG_PARSE_NOOPTIONARGPROVIDEDTOX_S  _MESSAGE(5008, _("no option argument provided to "SFQ""))
 
-#define MSG_COMPLATTRNOTCHANGED       _MESSAGE(5009, _("Complex attribute configuartion has not been changed\n"))
+#define MSG_CENTRY_NOTCHANGED         _MESSAGE(5009, _("Complex attribute configuartion has not been changed\n"))
+#define MSG_CENTRY_DOESNOTEXIST_S     _MESSAGE(5010, _("Complex attribute "SFQ" does not exist\n"))
+#define MSG_CENTRY_FILENOTCORRECT_S   _MESSAGE(5011, _("Complex attribute file "SFQ" is not correct\n"))
+#define MSG_CUSER_DOESNOTEXIST_S      _MESSAGE(5012, _("User mapping entry "SFQ" does not exist\n"))
+#define MSG_CUSER_FILENOTCORRECT_S    _MESSAGE(5013, _("User mapping file "SFQ" is not correct\n"))
 
 #endif /* __MSG_QCONF_H */
 
